tests/errors/const_divzero.vt
const X: int = 1 / 0; fn main(){}
